# autoopencode

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  autocode.yaml  opencode.json  pyproject.toml  run_autopilot.sh  run_meta_autopilot.sh  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/agents/: goal-autopilot.agent.md  goal-meta-autopilot.agent.md
.opencode/autopilot/: autocode_config.py  checkpoint.py  controller.py  goal.md  goal.template.md  kpi.py  launcher.py  meta_autopilot.py  reporting.py  run_autopilot.py  self_improving_loop.py  sync.py
.opencode/autopilot/components/autopilot/algorithms/: family-inference.yaml
.opencode/autopilot/components/autopilot/parameters/: inference-params.yaml  loop-params.yaml
.opencode/instructions/: SESSION-LIFECYCLE.md  vibe.md
.opencode/skills/long-horizon-autonomy/: SKILL.md
.opencode/skills/prod-diagnose/: SKILL.md
knowledge/: autopilot_kb.yaml
knowledge/archive/kb_snapshots/: autopilot_kb_2026-06-12T132012Z.md
scripts/: autocode_config.py  checkpoint.py  controller.py  kpi.py  memory.py  meta_autopilot.py  reporting.py  run_autopilot.py  self_improving_loop.py
tests/: test_autocode_config.py  test_checkpoint.py  test_config.py  test_controller.py  test_imports.py  test_kpi.py  test_memory.py  test_meta_autopilot.py  test_repo_hygiene.py  test_run_autopilot.py  test_self_improving_loop.py  test_sync.py
(+4 files in other folders)
