[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autocode"
description = "Drop-in autonomous improvement loop for any repository"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["opencode", "autopilot", "ai-agent", "automation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = false
explicit_package_bases = true

[tool.ruff]
line-length = 120
target-version = "py310"
